--- a/resume.html
+++ b/resume.html
@@ -98,268 +98,141 @@
         <div class="container">
           <div class="row d-flex justify-content-end mt-5">
           	<div class="col-md-10">
-          		<div class="profile ftco-animate">
-	          		<h2 class="mb-4">CV</h2>
-          		</div>
 
           		<div class="exp mt-5 ftco-animate">
-          			<h3 class="mb-4">Public Art Exhibitions</h3>
-          			<div class="exp-wrap py-4">
+                <div class="profile ftco-animate">
+  	          		<h2 class="mb-4">CV</h2>
+            		</div>
+          			<h5>Public Art Exhibitions</h5>
+          			<!--<div class="exp-wrap py-4">-->
           				<div class="desc">
-	          				<h5>Art.Write.Now.Tour</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>2019 - 2020</p>
+	          				<div>Art. Write. Now. Tour 2019 - 2020</div>
           				</div>
 
                   <div class="desc">
-	          				<h5>Columbus College of Art & Design</h5>
-	          				<p class="location">Columbus, OH</p>
-          				</div>
-          				<div class="year">
-          					<p>September - October 2019</p>
+	          				<div>Columbus College of Art & Design. Columbus, OH. September - October 2019</div>
           				</div>
 
                   <div class="desc">
-	          				<h5>21 Dreams Arts & Culture</h5>
-	          				<p class="location">Montgomery</p>
-          				</div>
-          				<div class="year">
-          					<p>November - December 2019</p>
+	          				<div>21 Dreams Arts & Culture. Montgomery, AL. November - December 2019</div>
           				</div>
 
                   <div class="desc">
-	          				<h5>Pennsylvania Academy of Fine Arts</h5>
-	          				<p class="location">Philadelphia, PA</p>
-          				</div>
-          				<div class="year">
-          					<p>January - February 2020</p>
+	          				<div>Pennsylvania Academy of Fine Arts. Philadelphia, PA. January - February 2020</div>
           				</div>
 
                   <div class="desc">
-	          				<h5>Joslyn Art Museum</h5>
-	          				<p class="location">Omaha, NE</p>
-          				</div>
-          				<div class="year">
-          					<p>March - May 2020</p>
-          				</div>
+                    <div>Joslyn Art Museum. Omaha, NE. March - May 2020</div>
+                  </div>
 
                   <div class="desc">
-	          				<h5>Art. Write. Now. 2019 National Exhibition</h5>
-	          				<p class="location">Sheila C. Johnson Design Center at Parsons</p>
-          				</div>
-          				<div class="year">
-          					<p></p>
-          				</div>
+                    <div>Art. Write. Now. 2019 National Exhibition</div>
+                  </div>
 
                   <div class="desc">
-	          				<h5>School of Design at The New School</h5>
-	          				<p class="location">New York City, NY</p>
-          				</div>
-          				<div class="year">
-          					<p>June 2019</p>
-          				</div>
+                    <div>School of Design at The New School. New York, NY. June 2019</div>
+                  </div>
 
                   <div class="desc">
-	          				<h5>National Scholastic Art and Writing Regional Exhibition</h5>
-	          				<p class="location">Pacific Grove Art Center, Pacific Grove, CA</p>
-          				</div>
-          				<div class="year">
-          					<p>March 2019</p>
-          				</div>
+                    <div>National Scholastic Art and Writing Regional Exhibition. Pacific Grove Art Center, Pacific Grove, CA. March 2019</div>
+                  </div>
 
                   <div class="desc">
-	          				<h5>MICA Visual Art Exhibition</h5>
-	          				<p class="location">MICA</p>
-          				</div>
-          				<div class="year">
-          					<p>July 2019</p>
-          				</div>
+                    <div>MICA Visual Art Exhibition. MICA, Baltimore, MD. July 2019</div>
+                  </div>
 
                   <div class="desc">
-	          				<h5>Youth Art Annual Exhibition</h5>
-	          				<p class="location">Palo Alto Art Center</p>
-          				</div>
-          				<div class="year">
-          					<p>April 2019</p>
-          				</div>
+                    <div>Youth Art Annual Exhibition. Pallo Alto Art Center, Palo Alto, CA. April 2019</div>
+                  </div>
 
                   <div class="desc">
-	          				<h5>AP Studio Art Group Exhibition</h5>
-	          				<p class="location">Gunn High School library</p>
-          				</div>
-          				<div class="year">
-          					<p>December 2018</p>
-          				</div>
+                    <div>AP Studio Art Group Exhibition. Gunn High School library, Palo Alto, CA. December 2018</div>
+                  </div>
 
                   <div class="desc">
-	          				<h5>CSSSA Visual Art Exhibition</h5>
-	          				<p class="location">CalArts</p>
-          				</div>
-          				<div class="year">
-          					<p>August 2018</p>
-          				</div>
+                    <div>CSSSA Visual Art Exhibition. CalArts, Valencia, CA. August 2018</div>
+                  </div>
 
-          			</div>
+          			<!--</div>-->
+                <br>
+                <h5>Awards</h5>
+                <div class="desc">
+                  <div>National Gold Medal in Painting, Scholastic Art & Writing Awards, 2019</div>
+                </div>
 
-                <h3 class="mb-4">Awards</h3>
-          			<div class="exp-wrap py-4">
-          				<div class="desc">
-	          				<h5>National Gold Medal in Painting, Scholastic Art & Writing Awards</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>2019</p>
-          				</div>
+                <div class="desc">
+                  <div>3 Regional Gold Keys, Scholastic Art & Writing Awards, 2019</div>
+                </div>
 
-                  <div class="desc">
-	          				<h5>3 Regional Gold Keys, Scholastic Art & Writing Awards</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>2019</p>
-          				</div>
+                <div class="desc">
+                  <div>Honorable Mention, Scholastic Art & Writing Awards, 2019</div>
+                </div>
 
-                  <div class="desc">
-	          				<h5>Honorable Mention, Scholsatic Art & Writing Awards</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>2019</p>
-          				</div>
+                <div class="desc">
+                  <div>Congressional Art Competition Certificate, 2018</div>
+                </div>
 
-                  <div class="desc">
-	          				<h5>Congressional Art Competition Certificate</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>2018</p>
-          				</div>
+                <div class="desc">
+                  <div>Future Art China International Art Competition Semi-Finalist, 2017</div>
+                </div>
 
-                  <div class="desc">
-	          				<h5>Future Art China International Art Competition Semi-Finalist</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>2017</p>
-          				</div>
+                <br>
+                <h5>Comissioned/Requested Projects</h5>
+                <div class="desc">
+                  <div>TEDx Gunn High School "One Step Forward" promotional & merchandise branding, 2020</div>
+                </div>
 
-          			</div>
+                <div class="desc">
+                  <div><i>The Gunn Oracle</i> Apparel Design, 2019 - 2020</div>
+                </div>
 
-                <h3 class="mb-4">Comissioned/Requested Projects</h3>
-          			<div class="exp-wrap py-4">
-          				<div class="desc">
-	          				<h5>Gunn High School TEDx "One Step Forward" promotional & merchandise branding</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>2020</p>
-          				</div>
+                <div class="desc">
+                  <div>City of Palo Alto Buoyancy Festival Branding, 2019</div>
+                </div>
 
-                  <div class="desc">
-	          				<h5>The Gunn Oracle Apparel Design</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>2019 - 2020</p>
-          				</div>
+                <div class="desc">
+                  <div>Commission Painting for Yerba Buena Ice Skating Center, 2019</div>
+                </div>
 
-                  <div class="desc">
-	          				<h5>City of Palo Alto Buoyancy Festival Branding</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>2019</p>
-          				</div>
+                <div class="desc">
+                  <div>Gunn High School DECA Logo and Apparel Design, 2019</div>
+                </div>
 
-                  <div class="desc">
-	          				<h5>Commission Painting for Yerba Buena Ice Skating Center</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>2019</p>
-          				</div>
+                <div class="desc">
+                  <div>Gunn Cancer Society Logo Design, 2018</div>
+                </div>
 
-                  <div class="desc">
-	          				<h5>Gunn High School DECA Logo and Apparel Design</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>2019</p>
-          				</div>
+                <div class="desc">
+                  <div>San Francisco Ice Theater Team Pin Design, 2015 - 2019</div>
+                </div>
 
-                  <div class="desc">
-	          				<h5>Gunn Cancer Society Logo Design</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>2018</p>
-          				</div>
+                <br>
+                <h5>Publications</h5>
+                <div class="desc">
+                  <div>Pandora's Box, Spring Issue 2019</div>
+                </div>
 
-                  <div class="desc">
-	          				<h5>San Francisco Ice Theater Team Pin Design</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>2015 - 2019</p>
-          				</div>
-          			</div>
+                <div class="desc">
+                  <div>Pandora's Box, Cover Page Winter Issue 2018</div>
+                </div>
 
-                <h3 class="mb-4">Publications</h3>
-          			<div class="exp-wrap py-4">
-          				<div class="desc">
-	          				<h5>Pandora's Box</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>Spring Issue 2019</p>
-          				</div>
+                <div class="desc">
+                  <div>Palo Alto Roots Literary Magazine, 2017</div>
+                </div>
 
-                  <div class="desc">
-	          				<h5>Pandora's Box</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>Cover Page Winter Issue 2018</p>
-          				</div>
+                <br>
+                <h5>Education</h5>
+                <div class="desc">
+                  <div>Henry M. Gunn High School, 2016 - 2020</div>
+                </div>
 
-                  <div class="desc">
-	          				<h5>Palo Alto Roots Literary Magazine</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>2017</p>
-          				</div>
-          			</div>
+                <div class="desc">
+                  <div>Graphic Design Core, MICA Pre-College, 2019</div>
+                </div>
 
-                <h3 class="mb-4">Education</h3>
-          			<div class="exp-wrap py-4">
-          				<div class="desc">
-	          				<h5>Henry M. Gunn High School</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>2017 - 2020</p>
-          				</div>
-
-                  <div class="desc">
-	          				<h5>Graphic Design Core, Maryland Institute College of Art Pre College</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>2019</p>
-          				</div>
-
-                  <div class="desc">
-	          				<h5>Visual Arts Major, California State Summer School of the Arts</h5>
-	          				<p class="location"></p>
-          				</div>
-          				<div class="year">
-          					<p>2018</p>
-          				</div>
-
-          			</div>
+                <div class="desc">
+                  <div>Visual Arts Major, CSSSA, 2018</div>
+                </div>
 
           		</div>
           	</div>
