added missing portfolio pages, changed order of closeups

--- a/portfolio/portfolio9.html
+++ b/portfolio/portfolio9.html
@@ -120,26 +120,20 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6">
                     <div class="about-us-content mb-80">
-                        <h3 class="wow fadeInUp" data-wow-delay="100ms">Hollow Men</h3>
+                        <h3 class="wow fadeInUp" data-wow-delay="100ms">Figure Skating Poses</h3>
                         <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
-                        <p class="wow fadeInUp" data-wow-delay="300ms">Our assignment was to create an artists’ book with any text we chose. I decided to create a visual poetry book for Verse 5 of <i>The Hollow Men</i>, by T.S. Elliot. I created a modified version of an accordion book, which allowed me to use the folded sides as mirrors for the repetitive text of “through the-,” and the unfolded sides for the “falls the shadow” segments. The modified accordion style also allows me to use multiple sides and perspectives to depict the distorted, fragmented reality and lost identity of man. I took advantage of this format by illustrating and printing humanoid figures on the sides, so that readers get a multi-faced experience of simultaneously reading the text and the visuals. I also chose Galaxis Polaris Condensed as my font to portray the delicate fragility of the text.</p>
+                        <p class="wow fadeInUp" data-wow-delay="300ms">Another personal piece from my sketchbook. Inspired by Henri Matisse, I drew abstract representations of the human body, using figure skating poses I’ve done before as inspiration. I and create a poster out of it. Two colors outside of black and white were allowed, and I was interested in seeing how my placement of color would impact the various positions of the skaters. My choice of colors meant to mimic the bright, vibrant colors often seen in modern murals.</p>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="mb-80 wow fadeInUp" data-wow-delay="100ms">
-                      <div class="single-portfolio-content">
-                          <img src="../img/portfolio/portfolio12.jpg" alt="">
-                          <div class="hover-content">
-                              <a href="../img/close_ups/12_2.jpg" class="portfolio-img">+</a>
-                              <a href="../img/close_ups/12_4.jpg" class="portfolio-img">+</a>
-                              <a href="../img/close_ups/12_3.jpg" class="portfolio-img">+</a>
-                              <a href="../img/close_ups/12_6.jpg" class="portfolio-img">+</a>
-                              <a href="../img/close_ups/12_5.jpg" class="portfolio-img">+</a>
-                              <a href="../img/close_ups/12_7.jpg" class="portfolio-img">+</a>
-                              <a href="../img/close_ups/12_1.jpg" class="portfolio-img">+</a>
-                          </div>
+                      <div>
+                          <img src="../img/portfolio/portfolio9.jpg" alt="">
+                          <!--<div class="hover-content">
+                              <a href="../img/concentration/con1closeup.jpg" class="portfolio-img">+</a>
+                              <a href="../img/concentration/con1.jpg" class="portfolio-img">+</a>
+                          </div>-->
                       </div>
-                      <figcaption><br>Click to see close-ups!</figcaption>
                     </div>
                 </div>
             </div>
