--- a/portfolio/portfolio4.html
+++ b/portfolio/portfolio4.html
@@ -120,26 +120,20 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6">
                     <div class="about-us-content mb-80">
-                        <h3 class="wow fadeInUp" data-wow-delay="100ms">Hollow Men</h3>
+                        <h3 class="wow fadeInUp" data-wow-delay="100ms">All Nerves, No Spine</h3>
                         <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
-                        <p class="wow fadeInUp" data-wow-delay="300ms">Our assignment was to create an artists’ book with any text we chose. I decided to create a visual poetry book for Verse 5 of <i>The Hollow Men</i>, by T.S. Elliot. I created a modified version of an accordion book, which allowed me to use the folded sides as mirrors for the repetitive text of “through the-,” and the unfolded sides for the “falls the shadow” segments. The modified accordion style also allows me to use multiple sides and perspectives to depict the distorted, fragmented reality and lost identity of man. I took advantage of this format by illustrating and printing humanoid figures on the sides, so that readers get a multi-faced experience of simultaneously reading the text and the visuals. I also chose Galaxis Polaris Condensed as my font to portray the delicate fragility of the text.</p>
+                        <p class="wow fadeInUp" data-wow-delay="300ms">A follow-up of <a href="portfolio5.html">Brainwaves</a>, I created a second, triptych woodblock print to explore the human nervous system through spines. Spines are a core factor in our central nervous system, and throughout our lives it proves to be extremely versatile. I created multiple alterations and directions of the spines to represent their flexibility and tendency to fuse as we age. Furthermore, I chose 3 prints due to how our body is constructed of motor, sensory, and autonomic signals between the spinal cord and the body.</p>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="mb-80 wow fadeInUp" data-wow-delay="100ms">
-                      <div class="single-portfolio-content">
-                          <img src="../img/portfolio/portfolio12.jpg" alt="">
-                          <div class="hover-content">
-                              <a href="../img/close_ups/12_2.jpg" class="portfolio-img">+</a>
-                              <a href="../img/close_ups/12_4.jpg" class="portfolio-img">+</a>
-                              <a href="../img/close_ups/12_3.jpg" class="portfolio-img">+</a>
-                              <a href="../img/close_ups/12_6.jpg" class="portfolio-img">+</a>
-                              <a href="../img/close_ups/12_5.jpg" class="portfolio-img">+</a>
-                              <a href="../img/close_ups/12_7.jpg" class="portfolio-img">+</a>
-                              <a href="../img/close_ups/12_1.jpg" class="portfolio-img">+</a>
-                          </div>
+                      <div>
+                          <img src="../img/portfolio/portfolio4.jpg" alt="">
+                          <!--<div class="hover-content">
+                              <a href="../img/concentration/con1closeup.jpg" class="portfolio-img">+</a>
+                              <a href="../img/concentration/con1.jpg" class="portfolio-img">+</a>
+                          </div>-->
                       </div>
-                      <figcaption><br>Click to see close-ups!</figcaption>
                     </div>
                 </div>
             </div>
