--- a/portfolio/portfolio8.html
+++ b/portfolio/portfolio8.html
@@ -120,26 +120,20 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6">
                     <div class="about-us-content mb-80">
-                        <h3 class="wow fadeInUp" data-wow-delay="100ms">Hollow Men</h3>
+                        <h3 class="wow fadeInUp" data-wow-delay="100ms">All You Are</h3>
                         <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
-                        <p class="wow fadeInUp" data-wow-delay="300ms">Our assignment was to create an artists’ book with any text we chose. I decided to create a visual poetry book for Verse 5 of <i>The Hollow Men</i>, by T.S. Elliot. I created a modified version of an accordion book, which allowed me to use the folded sides as mirrors for the repetitive text of “through the-,” and the unfolded sides for the “falls the shadow” segments. The modified accordion style also allows me to use multiple sides and perspectives to depict the distorted, fragmented reality and lost identity of man. I took advantage of this format by illustrating and printing humanoid figures on the sides, so that readers get a multi-faced experience of simultaneously reading the text and the visuals. I also chose Galaxis Polaris Condensed as my font to portray the delicate fragility of the text.</p>
+                        <p class="wow fadeInUp" data-wow-delay="300ms">A personal piece from my sketchbook, digitized from a traditional drawing. I used this piece as an opportunity to study hands, and how they can express varying emotions. The realistic hands, over-hatched for exaggeration, remain pliant and relaxed on the surface. The contoured hands, however, resemble the abstract complexity of internalized emotion, and are expressed in a much more aggressive fashion. While the realistic hands are shown with a calm demeanor, the contoured hands appear to attach the flesh. I also drew a red ribbon to show the connection of the internal and external mind, and how we remain trapped inside.</p>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="mb-80 wow fadeInUp" data-wow-delay="100ms">
-                      <div class="single-portfolio-content">
-                          <img src="../img/portfolio/portfolio12.jpg" alt="">
-                          <div class="hover-content">
-                              <a href="../img/close_ups/12_2.jpg" class="portfolio-img">+</a>
-                              <a href="../img/close_ups/12_4.jpg" class="portfolio-img">+</a>
-                              <a href="../img/close_ups/12_3.jpg" class="portfolio-img">+</a>
-                              <a href="../img/close_ups/12_6.jpg" class="portfolio-img">+</a>
-                              <a href="../img/close_ups/12_5.jpg" class="portfolio-img">+</a>
-                              <a href="../img/close_ups/12_7.jpg" class="portfolio-img">+</a>
-                              <a href="../img/close_ups/12_1.jpg" class="portfolio-img">+</a>
-                          </div>
+                      <div>
+                          <img src="../img/portfolio/portfolio8.jpg" alt="">
+                          <!--<div class="hover-content">
+                              <a href="../img/concentration/con1closeup.jpg" class="portfolio-img">+</a>
+                              <a href="../img/concentration/con1.jpg" class="portfolio-img">+</a>
+                          </div>-->
                       </div>
-                      <figcaption><br>Click to see close-ups!</figcaption>
                     </div>
                 </div>
             </div>
