--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
                                     <li><a href="./portfolio.html">Portfolio</a>
                                     </li>
                                     <li><a href="./about.html">About</a></li>
-                                    <li><a href="./gallery.html">Résumé</a></li>
+                                    <li><a href="./resume.html">CV</a></li>
                                     <li><a href="https://shanngens.com">Shanngens</a>
                                         <ul class="dropdown">
                                             <li><a href="./index.html">- About</a></li>
-                                            <li><a href="./index.html">- YouTube</a></li>
-                                            <li><a href="./index.html">- Instagram</a></li>
+                                            <li><a href="https://www.youtube.com/channel/UCPKT4TCm6bDl1R_Pn7XY4ww">- YouTube</a></li>
+                                            <li><a href="https://www.instagram.com/shanngens/">- Instagram</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="">Contact</a></li>
