uhhh a ton of stuff

--- a/about.html
+++ b/about.html
@@ -72,22 +72,21 @@
                                 <ul id="nav">
                                     <li><a href="./index.html">Home</a></li>
                                     <li><a href="#">Pages</a>
-                                        <ul class="dropdown">
-                                            <li><a href="./index.html">- Home</a></li>
-                                            <li><a href="./about.html">- About</a></li>
-                                            <li><a href="./gallery.html">- Gallery</a></li>
-                                            <li><a href="./blog.html">- Blog</a></li>
-                                            <li><a href="./single-blog.html">- Blog Details</a></li>
-                                            <li><a href="./contact.html">- Contact</a></li>
-                                            <li><a href="#">- Dropdown</a>
-                                                <ul class="dropdown">
-                                                    <li><a href="#">- Dropdown Item</a></li>
-                                                    <li><a href="#">- Dropdown Item</a></li>
-                                                    <li><a href="#">- Dropdown Item</a></li>
-                                                    <li><a href="#">- Dropdown Item</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
+                                      <ul id="nav">
+                                          <li><a href="./index.html">Home</a></li>
+                                          <li><a href="./portfolio.html">Portfolio</a>
+                                          </li>
+                                          <li class="active"><a href="./about.html">About</a></li>
+                                          <li><a href="./resume.html">CV</a></li>
+                                          <li><a href="https://shanngens.com">Shanngens</a>
+                                              <ul class="dropdown">
+                                                  <li><a href="./shanngens_about.html">- About</a></li>
+                                                  <li><a href="https://www.youtube.com/channel/UCPKT4TCm6bDl1R_Pn7XY4ww">- YouTube</a></li>
+                                                  <li><a href="https://www.instagram.com/shanngens/">- Instagram</a></li>
+                                              </ul>
+                                          </li>
+                                          <li><a href="./contact.html">Contact</a></li>
+                                      </ul>
                                     </li>
                                     <li class="active"><a href="./about.html">About</a></li>
                                     <li><a href="./gallery.html">Gallery</a></li>
