--- a/contact.html
+++ b/contact.html
@@ -66,21 +66,21 @@
                             </div>
                             <!-- Nav Start -->
                             <div class="classynav">
-                                <ul id="nav">
-                                    <li class="active"><a href="./index.html">Home</a></li>
-                                    <li><a href="./portfolio.html">Portfolio</a>
-                                    </li>
-                                    <li><a href="./about.html">About</a></li>
-                                    <li><a href="./gallery.html">Résumé</a></li>
-                                    <li><a href="https://shanngens.com">Shanngens</a>
-                                        <ul class="dropdown">
-                                            <li><a href="./index.html">- About</a></li>
-                                            <li><a href="./index.html">- YouTube</a></li>
-                                            <li><a href="./index.html">- Instagram</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="">Contact</a></li>
-                                </ul>
+                              <ul id="nav">
+                                  <li><a href="./index.html">Home</a></li>
+                                  <li><a href="./portfolio.html">Portfolio</a>
+                                  </li>
+                                  <li><a href="./about.html">About</a></li>
+                                  <li><a href="./resume.html">CV</a></li>
+                                  <li><a href="https://shanngens.com">Shanngens</a>
+                                      <ul class="dropdown">
+                                          <li><a href="./shanngens_about.html">- About</a></li>
+                                          <li><a href="https://www.youtube.com/channel/UCPKT4TCm6bDl1R_Pn7XY4ww">- YouTube</a></li>
+                                          <li><a href="https://www.instagram.com/shanngens/">- Instagram</a></li>
+                                      </ul>
+                                  </li>
+                                  <li class="active"><a href="./contact.html">Contact</a></li>
+                              </ul>
 
                                 <!-- Search Icon -->
                             </div>
@@ -124,8 +124,8 @@
                     <!-- Contact Info -->
                     <div class="contact-info mb-30">
                         <p>Email</p>
-                        <a href="mailto:shannonlin2012@gmail.com">shannonlin2012[at]gmail.com</a>
-                        <a href="mailto:shanngens@gmail.com">shanngens[at]gmail.com</a>
+                        <a href="mailto:shannonlin2012@gmail.com">shannonlin2012@gmail.com</a>
+                        <a href="mailto:shanngens@gmail.com">shanngens@gmail.com</a>
                     </div>
                     <!-- Contact Info -->
                 </div>
