--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
                                     <li><a href="./resume.html">CV</a></li>
                                     <li><a href="https://shanngens.com">Shanngens</a>
                                         <ul class="dropdown">
-                                            <li><a href="./index.html">- About</a></li>
+                                            <li><a href="./shanngens_about.html">- About</a></li>
                                             <li><a href="https://www.youtube.com/channel/UCPKT4TCm6bDl1R_Pn7XY4ww">- YouTube</a></li>
                                             <li><a href="https://www.instagram.com/shanngens/">- Instagram</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="">Contact</a></li>
+                                    <li><a href="./contact.html">Contact</a></li>
                                 </ul>
 
                                 <!-- Search Icon -->
@@ -106,7 +106,7 @@
                                 <h2 data-animation="bounceInDown" data-delay="900ms">Hi, I'm Shannon!</h2>
                                 <p data-animation="bounceInDown" data-delay="500ms">I specialize in design, illustration, and fine arts, with additional experience in animations.</p>
                                 <div class="hero-btn-group" data-animation="bounceInDown" data-delay="100ms">
-                                    <a href="#" class="btn alime-btn mb-3 mb-sm-0 mr-4">Contact Me</a>
+                                    <a href="./contact.html" class="btn alime-btn mb-3 mb-sm-0 mr-4">Contact Me</a>
                                 </div>
                             </div>
                         </div>
@@ -124,7 +124,7 @@
                                 <h2 data-animation="bounceInUp" data-delay="100ms">Hi, I'm Shannon!</h2>
                                 <p data-animation="bounceInUp" data-delay="500ms">I specialize in design, illustration, and fine arts, with additional experience in animations.</p>
                                 <div class="hero-btn-group" data-animation="bounceInUp" data-delay="900ms">
-                                    <a href="#" class="btn alime-btn mb-3 mb-sm-0 mr-4">Contact Me</a>
+                                    <a href="./contact.html" class="btn alime-btn mb-3 mb-sm-0 mr-4">Contact Me</a>
                                 </div>
                             </div>
                         </div>
@@ -142,7 +142,7 @@
                                 <h2 data-animation="bounceInDown" data-delay="900ms">Hi, I'm Shannon!</h2>
                                 <p data-animation="bounceInDown" data-delay="500ms">I specialize in design, illustration, and fine arts, with additional experience in animations.</p>
                                 <div class="hero-btn-group" data-animation="bounceInDown" data-delay="100ms">
-                                    <a href="#" class="btn alime-btn mb-3 mb-sm-0 mr-4">Contact Me</a>
+                                    <a href="./contact.html" class="btn alime-btn mb-3 mb-sm-0 mr-4">Contact Me</a>
                                 </div>
                             </div>
                         </div>
@@ -199,9 +199,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio5.jpg" alt="">
+                        <img src="img/portfolio/portfolio6.jpg" alt="">
                         <div class="hover-content">
-                            <a href="portfolio/portfolio5.html">+</a>
+                            <a href="portfolio/portfolio6.html">+</a>
                         </div>
                     </div>
                 </div>
@@ -209,9 +209,9 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/portfolio/portfolio6.jpg" alt="">
+                        <img src="img/portfolio/portfolio5.jpg" alt="">
                         <div class="hover-content">
-                            <a href="portfolio/portfolio6.html">+</a>
+                            <a href="portfolio/portfolio5.html">+</a>
                         </div>
                     </div>
                 </div>
