--- a/shanngens_about.html
+++ b/shanngens_about.html
@@ -11,8 +11,28 @@
     <title>Shannon Lin | Art Portfolio</title>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="../style.css">
-
+    <link rel="stylesheet" href="style.css">
+    <style>
+    body {
+      background-color: #072832;
+    }
+    h2 {
+      color: #ffffff;
+    }
+    h5 {
+      color: #ffffff;
+    }
+    div {
+      color: #ffffff;
+    }
+    .footer-content
+    .copywrite-text p {
+      color: #ffffff;
+    }
+    a, a:active, a:focus, a:hover {
+      color: #ffffff;
+    }
+    </style>
 </head>
 
 <body>
@@ -31,7 +51,7 @@
                         <!-- Close -->
                         <button type="button" class="btn close-btn" data-dismiss="modal"><i class="ti-close"></i></button>
                         <!-- Form -->
-                        <form action="../index.html" method="post">
+                        <form action="index.html" method="post">
                             <input type="search" name="top-search-bar" class="form-control" placeholder="Search and hit enter...">
                             <button type="submit">Search</button>
                         </form>
@@ -51,7 +71,7 @@
                     <nav class="classy-navbar justify-content-between" id="alimeNav">
 
                         <!-- Logo -->
-                        <a class="nav-brand" href="../index.html"><img src="../img/core-img/sl_logo.png" alt=""></a>
+                        <a class="nav-brand" href="./index.html"><img src="./img/core-img/sl_logo.png" alt=""></a>
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
@@ -68,11 +88,11 @@
                             <div class="classynav">
                               <ul id="nav">
                                   <li><a href="./index.html">Home</a></li>
-                                  <li class="active"><a href="./portfolio.html">Portfolio</a>
+                                  <li><a href="./portfolio.html">Portfolio</a>
                                   </li>
                                   <li><a href="./about.html">About</a></li>
                                   <li><a href="./resume.html">CV</a></li>
-                                  <li><a href="https://shanngens.com">Shanngens</a>
+                                  <li class="active"><a href="https://shanngens.com">Shanngens</a>
                                       <ul class="dropdown">
                                           <li><a href="./shanngens_about.html">- About</a></li>
                                           <li><a href="https://www.youtube.com/channel/UCPKT4TCm6bDl1R_Pn7XY4ww">- YouTube</a></li>
@@ -91,55 +111,155 @@
             </div>
         </div>
     </header>
-    <!-- Header Area End -->
 
 
-    <!-- Breadcrumb Area Start -->
-    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(../img/bg-img/portfolio.jpg);">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center">
-                <div class="col-12">
-                    <div class="breadcrumb-content text-center">
-                        <h2 class="page-title">Portfolio</h2>
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb justify-content-center">
-                                <li class="breadcrumb-item"><a href="index.html"><i class="icon_house_alt"></i> Home</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">Portfolio</li>
-                            </ol>
-                        </nav>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Breadcrumb Area End -->
-
-    <!-- About Us Area Start -->
-    <div class="about-us-area section-padding-80-0 clearfix">
+    <!-- Blog Details Area Start -->
+    <div class="alime--blog-area section-padding-80">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-12 col-lg-6">
-                    <div class="about-us-content mb-80">
-                        <h3 class="wow fadeInUp" data-wow-delay="100ms">Ephemeral</h3>
-                        <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
-                        <p class="wow fadeInUp" data-wow-delay="300ms">A personal piece of one of my best friends during the most memorable time of my life. On the last day before our departure, I took a photo of her looking out into the distance as we watched the sunrise. I truly cherish the short amount of time we spent together, and wanted to convey the beauty of my friend's colorful and vibrant personality, even with such a solemn expression. I made this piece rather quick, using rapid brush strokes in a “messy” sort of style to convey the ephemeral aspect. I also painted a tan background so that my friend would stand out with the vibrant colors to reflect her personality.</p>
-                    </div>
+          <div class="row d-flex justify-content-end mt-5">
+          	<div class="col-md-10">
+
+          		<div class="exp mt-5 ftco-animate">
+                <div class="profile ftco-animate">
+  	          		<h2 class="mb-4">CV</h2>
+            		</div>
+          			<h5>Public Art Exhibitions</h5>
+          			<!--<div class="exp-wrap py-4">-->
+          				<div class="desc">
+	          				<div>Art. Write. Now. Tour 2019 - 2020</div>
+          				</div>
+
+                  <div class="desc">
+	          				<div>Columbus College of Art & Design. Columbus, OH. September - October 2019</div>
+          				</div>
+
+                  <div class="desc">
+	          				<div>21 Dreams Arts & Culture. Montgomery, AL. November - December 2019</div>
+          				</div>
+
+                  <div class="desc">
+	          				<div>Pennsylvania Academy of Fine Arts. Philadelphia, PA. January - February 2020</div>
+          				</div>
+
+                  <div class="desc">
+                    <div>Joslyn Art Museum. Omaha, NE. March - May 2020</div>
+                  </div>
+
+                  <div class="desc">
+                    <div>Art. Write. Now. 2019 National Exhibition</div>
+                  </div>
+
+                  <div class="desc">
+                    <div>School of Design at The New School. New York, NY. June 2019</div>
+                  </div>
+
+                  <div class="desc">
+                    <div>National Scholastic Art and Writing Regional Exhibition. Pacific Grove Art Center, Pacific Grove, CA. March 2019</div>
+                  </div>
+
+                  <div class="desc">
+                    <div>MICA Visual Art Exhibition. MICA, Baltimore, MD. July 2019</div>
+                  </div>
+
+                  <div class="desc">
+                    <div>Youth Art Annual Exhibition. Pallo Alto Art Center, Palo Alto, CA. April 2019</div>
+                  </div>
+
+                  <div class="desc">
+                    <div>AP Studio Art Group Exhibition. Gunn High School library, Palo Alto, CA. December 2018</div>
+                  </div>
+
+                  <div class="desc">
+                    <div>CSSSA Visual Art Exhibition. CalArts, Valencia, CA. August 2018</div>
+                  </div>
+
+          			<!--</div>-->
+                <br>
+                <h5>Awards</h5>
+                <div class="desc">
+                  <div>National Gold Medal in Painting, Scholastic Art & Writing Awards, 2019</div>
                 </div>
-                <div class="col-12 col-lg-6">
-                    <div class="mb-80 wow fadeInUp" data-wow-delay="100ms">
-                      <div>
-                          <img src="../img/portfolio/portfolio14.jpg" alt="">
-                          <!--<div class="hover-content">
-                              <a href="../img/concentration/con1closeup.jpg" class="portfolio-img">+</a>
-                              <a href="../img/concentration/con1.jpg" class="portfolio-img">+</a>
-                          </div>-->
-                      </div>
-                    </div>
+
+                <div class="desc">
+                  <div>3 Regional Gold Keys, Scholastic Art & Writing Awards, 2019</div>
                 </div>
-            </div>
+
+                <div class="desc">
+                  <div>Honorable Mention, Scholastic Art & Writing Awards, 2019</div>
+                </div>
+
+                <div class="desc">
+                  <div>Congressional Art Competition Certificate, 2018</div>
+                </div>
+
+                <div class="desc">
+                  <div>Future Art China International Art Competition Semi-Finalist, 2017</div>
+                </div>
+
+                <br>
+                <h5>Comissioned/Requested Projects</h5>
+                <div class="desc">
+                  <div>TEDx Gunn High School "One Step Forward" promotional & merchandise branding, 2020</div>
+                </div>
+
+                <div class="desc">
+                  <div><i>The Gunn Oracle</i> Apparel Design, 2019 - 2020</div>
+                </div>
+
+                <div class="desc">
+                  <div>City of Palo Alto Buoyancy Festival Branding, 2019</div>
+                </div>
+
+                <div class="desc">
+                  <div>Commission Painting for Yerba Buena Ice Skating Center, 2019</div>
+                </div>
+
+                <div class="desc">
+                  <div>Gunn High School DECA Logo and Apparel Design, 2019</div>
+                </div>
+
+                <div class="desc">
+                  <div>Gunn Cancer Society Logo Design, 2018</div>
+                </div>
+
+                <div class="desc">
+                  <div>San Francisco Ice Theater Team Pin Design, 2015 - 2019</div>
+                </div>
+
+                <br>
+                <h5>Publications</h5>
+                <div class="desc">
+                  <div>Pandora's Box, Spring Issue 2019</div>
+                </div>
+
+                <div class="desc">
+                  <div>Pandora's Box, Cover Page Winter Issue 2018</div>
+                </div>
+
+                <div class="desc">
+                  <div>Palo Alto Roots Literary Magazine, 2017</div>
+                </div>
+
+                <br>
+                <h5>Education</h5>
+                <div class="desc">
+                  <div>Henry M. Gunn High School, 2016 - 2020</div>
+                </div>
+
+                <div class="desc">
+                  <div>Graphic Design Core, MICA Pre-College, 2019</div>
+                </div>
+
+                <div class="desc">
+                  <div>Visual Arts Major, CSSSA, 2018</div>
+                </div>
+
+          		</div>
+          	</div>
+          </div>
         </div>
     </div>
-    <!-- About Us Area End -->
+    <!-- Blog Details Area End -->
 
     <!-- Follow Area Start -->
     <section class="follow-area clearfix">
@@ -160,7 +280,7 @@
         <div class="instragram-feed-area owl-carousel">
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="../img/insta/insta1new.png" alt="">
+                <img src="img/insta/insta1new.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/BvFjCk9AML6/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -170,7 +290,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="../img/insta/insta2.jpg" alt="">
+                <img src="img/insta/insta2.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/B1P30YFlNDX/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -180,7 +300,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="../img/insta/insta3.png" alt="">
+                <img src="img/insta/insta3.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/Bz6zC3NFvvl/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -190,7 +310,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="../img/insta/insta4.png" alt="">
+                <img src="img/insta/insta4.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/Bww-8_Bg90r/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -200,7 +320,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="../img/insta/insta5.png" alt="">
+                <img src="img/insta/insta5.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/B1kWHPSFMUk/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -210,7 +330,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="../img/insta/insta6.png" alt="">
+                <img src="img/insta/insta6.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/BzUKL2SlsY2/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -250,15 +370,15 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Shann
 
     <!-- **** All JS Files ***** -->
     <!-- jQuery 2.2.4 -->
-    <script src="../js/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <!-- Popper -->
-    <script src="../js/popper.min.js"></script>
+    <script src="js/popper.min.js"></script>
     <!-- Bootstrap -->
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- All Plugins -->
-    <script src="../js/alime.bundle.js"></script>
+    <script src="js/alime.bundle.js"></script>
     <!-- Active -->
-    <script src="../js/default-assets/active.js"></script>
+    <script src="js/default-assets/active.js"></script>
 
 </body>
 
