working on shanngens_about!!

--- a/shanngens_about.html
+++ b/shanngens_about.html
@@ -112,9 +112,25 @@
         </div>
     </header>
 
+    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/shanngens_bg.jpg);">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-12">
+                    <div class="breadcrumb-content text-center">
+                        <h2 class="page-title">Portfolio</h2>
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb justify-content-center">
+                                <li class="breadcrumb-item"><a href="index.html"><i class="icon_house_alt"></i> Home</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">Portfolio</li>
+                            </ol>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Blog Details Area Start -->
-    <div class="alime--blog-area section-padding-80">
         <div class="container">
           <div class="row d-flex justify-content-end mt-5">
           	<div class="col-md-10">
@@ -258,7 +274,7 @@
           	</div>
           </div>
         </div>
-    </div>
+
     <!-- Blog Details Area End -->
 
     <!-- Follow Area Start -->
