--- a/about.html
+++ b/about.html
@@ -8,10 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Title -->
-    <title>Alime - Photography HTML Template</title>
-
-    <!-- Favicon -->
-    <link rel="icon" href="./img/core-img/favicon.png">
+    <title>Shannon Lin | Art Portfolio</title>
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -54,7 +51,7 @@
                     <nav class="classy-navbar justify-content-between" id="alimeNav">
 
                         <!-- Logo -->
-                        <a class="nav-brand" href="./index.html"><img src="./img/core-img/logo.png" alt=""></a>
+                        <a class="nav-brand" href="./index.html"><img src="./img/core-img/sl_logo.png" alt=""></a>
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
@@ -71,31 +68,21 @@
                             <div class="classynav">
                                 <ul id="nav">
                                     <li><a href="./index.html">Home</a></li>
-                                    <li><a href="#">Pages</a>
-                                      <ul id="nav">
-                                          <li><a href="./index.html">Home</a></li>
-                                          <li><a href="./portfolio.html">Portfolio</a>
-                                          </li>
-                                          <li class="active"><a href="./about.html">About</a></li>
-                                          <li><a href="./resume.html">CV</a></li>
-                                          <li><a href="https://shanngens.com">Shanngens</a>
-                                              <ul class="dropdown">
-                                                  <li><a href="./shanngens_about.html">- About</a></li>
-                                                  <li><a href="https://www.youtube.com/channel/UCPKT4TCm6bDl1R_Pn7XY4ww">- YouTube</a></li>
-                                                  <li><a href="https://www.instagram.com/shanngens/">- Instagram</a></li>
-                                              </ul>
-                                          </li>
-                                          <li><a href="./contact.html">Contact</a></li>
-                                      </ul>
+                                    <li><a href="./portfolio.html">Portfolio</a>
                                     </li>
                                     <li class="active"><a href="./about.html">About</a></li>
-                                    <li><a href="./gallery.html">Gallery</a></li>
-                                    <li><a href="./blog.html">Blog</a></li>
+                                    <li><a href="./resume.html">CV</a></li>
+                                    <li><a href="https://shanngens.com">Shanngens</a>
+                                        <ul class="dropdown">
+                                            <li><a href="./shanngens_about.html">- About</a></li>
+                                            <li><a href="https://www.youtube.com/channel/UCPKT4TCm6bDl1R_Pn7XY4ww">- YouTube</a></li>
+                                            <li><a href="https://www.instagram.com/shanngens/">- Instagram</a></li>
+                                        </ul>
+                                    </li>
                                     <li><a href="./contact.html">Contact</a></li>
                                 </ul>
 
                                 <!-- Search Icon -->
-                                <div class="search-icon" data-toggle="modal" data-target="#searchModal"><i class="ti-search"></i></div>
                             </div>
                             <!-- Nav End -->
                         </div>
