changed bg color

--- a/shanngens_about.html
+++ b/shanngens_about.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
     body {
-      background-color: #072832;
+      background-color: #0d2738;
     }
     h2 {
       color: #ffffff;
