--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
                             <div class="classynav">
                               <ul id="nav">
                                   <li><a href="./index.html">Home</a></li>
-                                  <li class="active><a href="./portfolio.html">Portfolio</a>
+                                  <li class="active"><a href="./portfolio.html">Portfolio</a>
                                   </li>
                                   <li><a href="./about.html">About</a></li>
                                   <li><a href="./resume.html">CV</a></li>
