--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
     <!-- Header Area End -->
 
     <!-- Breadcrumb Area Start -->
-    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/38.jpg);">
+    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/portfolio.jpg);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -119,19 +119,15 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6">
                     <div class="about-us-content mb-80">
-                        <h3 class="wow fadeInUp" data-wow-delay="100ms">We Live For Passion</h3>
+                        <h3 class="wow fadeInUp" data-wow-delay="100ms">About</h3>
                         <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
-                        <p class="wow fadeInUp" data-wow-delay="300ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
-                        <p class="wow fadeInUp" data-wow-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
-                        <a class="btn alime-btn btn-2 mt-30 wow fadeInUp" data-wow-delay="500ms" href="#">Contact Us</a>
+                        <p class="wow fadeInUp" data-wow-delay="300ms">Shannon Lin is an artist, designer and animator from California’s Silicon Valley. Most of her work is centered around themes of mentality and identity, and is based on her interest in psychology, philosophy and biology. Her work has been exhibited in NYC, Philadelphia, Columbus, and many more. Currently, her painting “Euphoria on Ice” is selected among 50 Art pieces from National Gold Medalists in the 2019 Scholastic Awards to join the Art.Write.Now. Tour, a traveling exhibition showcasing some of the most stunning examples of teen-produced art and writing in the nation. In her free time, she enjoys animating and illustrating for her social media, as well as drinking copious amounts of tea.</p>
+                        <a class="btn alime-btn btn-2 mt-30 wow fadeInUp" data-wow-delay="500ms" href="contact.html">Contact Us</a>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <div class="about-video-area mb-80 wow fadeInUp" data-wow-delay="100ms">
-                        <img src="img/bg-img/17.jpg" alt="">
-                        <div class="video-icon">
-                            <a href="https://www.youtube.com/watch?v=sSakBz_eYzQ" class="video-play-btn"><i class="arrow_triangle-right"></i></a>
-                        </div>
+                    <div class="mb-80 wow fadeInUp" data-wow-delay="100ms">
+                        <img src="img/portfolio/portfolio6.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -139,147 +135,16 @@
     </div>
     <!-- About Us Area End -->
 
-    <!-- Why Choose Us Area Start -->
-    <section class="why-choose-us-area bg-gray section-padding-80-0 clearfix">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
-                        <h2>Why Choose Us</h2>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <!-- Single Why Choose Area -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="why-choose-us-content text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
-                        <div class="chosse-us-icon">
-                            <i class="fa fa-film" aria-hidden="true"></i>
-                        </div>
-                        <h4>High Quality Images</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur isicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut elit, sed do eiusmod te</p>
-                    </div>
-                </div>
-
-                <!-- Single Why Choose Area -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="why-choose-us-content text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
-                        <div class="chosse-us-icon">
-                            <i class="fa fa-pencil" aria-hidden="true"></i>
-                        </div>
-                        <h4>Abundant Experience</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur isicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut elit, sed do eiusmod te</p>
-                    </div>
-                </div>
-
-                <!-- Single Why Choose Area -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="why-choose-us-content text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
-                        <div class="chosse-us-icon">
-                            <i class="fa fa-camera" aria-hidden="true"></i>
-                        </div>
-                        <h4>Modern Equipments</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur isicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut elit, sed do eiusmod te</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Why Choose  us Area End -->
-
-    <!-- Our Team Area Start -->
-    <section class="our-team-area section-padding-80-50">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
-                        <h2>Our Team</h2>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <!-- Team Member Area -->
-                <div class="col-md-6 col-xl-3">
-                    <div class="team-content-area text-center mb-30 wow fadeInUp" data-wow-delay="100ms">
-                        <div class="member-thumb">
-                            <img src="img/bg-img/19.jpg" alt="">
-                        </div>
-                        <h5>Andrew Dean</h5>
-                        <span>Photographer</span>
-                        <div class="member-social-info">
-                            <a href="#"><i class="ti-facebook"></i></a>
-                            <a href="#"><i class="ti-twitter-alt"></i></a>
-                            <a href="#"><i class="ti-linkedin"></i></a>
-                            <a href="#"><i class="ti-pinterest"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Team Member Area -->
-                <div class="col-md-6 col-xl-3">
-                    <div class="team-content-area text-center mb-30 wow fadeInUp" data-wow-delay="300ms">
-                        <div class="member-thumb">
-                            <img src="img/bg-img/20.jpg" alt="">
-                        </div>
-                        <h5>Tommy Kim</h5>
-                        <span>Photographer</span>
-                        <div class="member-social-info">
-                            <a href="#"><i class="ti-facebook"></i></a>
-                            <a href="#"><i class="ti-twitter-alt"></i></a>
-                            <a href="#"><i class="ti-linkedin"></i></a>
-                            <a href="#"><i class="ti-pinterest"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Team Member Area -->
-                <div class="col-md-6 col-xl-3">
-                    <div class="team-content-area text-center mb-30 wow fadeInUp" data-wow-delay="500ms">
-                        <div class="member-thumb">
-                            <img src="img/bg-img/21.jpg" alt="">
-                        </div>
-                        <h5>Max McCormick</h5>
-                        <span>Photographer</span>
-                        <div class="member-social-info">
-                            <a href="#"><i class="ti-facebook"></i></a>
-                            <a href="#"><i class="ti-twitter-alt"></i></a>
-                            <a href="#"><i class="ti-linkedin"></i></a>
-                            <a href="#"><i class="ti-pinterest"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Team Member Area -->
-                <div class="col-md-6 col-xl-3">
-                    <div class="team-content-area text-center mb-30 wow fadeInUp" data-wow-delay="700ms">
-                        <div class="member-thumb">
-                            <img src="img/bg-img/22.jpg" alt="">
-                        </div>
-                        <h5>Robert Ward</h5>
-                        <span>Photographer</span>
-                        <div class="member-social-info">
-                            <a href="#"><i class="ti-facebook"></i></a>
-                            <a href="#"><i class="ti-twitter-alt"></i></a>
-                            <a href="#"><i class="ti-linkedin"></i></a>
-                            <a href="#"><i class="ti-pinterest"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Our Team Area End -->
-
     <!-- Follow Area Start -->
-    <div class="follow-area clearfix">
+    <section class="follow-area clearfix">
         <div class="container">
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center">
-                        <h2>Follow Instagram</h2>
-                        <p>@Alime_photographer</p>
+                        <br>
+                        <br>
+                        <h2>Follow Me on Instagram!</h2>
+                        <p><a href="https://www.instagram.com/shanngens/">@shanngens</a></p>
                     </div>
                 </div>
             </div>
@@ -289,66 +154,66 @@
         <div class="instragram-feed-area owl-carousel">
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/bg-img/11.jpg" alt="">
+                <img src="img/insta/insta1new.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
+                    <a href="https://www.instagram.com/p/BvFjCk9AML6/">
                         <i class="ti-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
+                        <span>@shanngens</span>
                     </a>
                 </div>
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/bg-img/12.jpg" alt="">
+                <img src="img/insta/insta2.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
+                    <a href="https://www.instagram.com/p/B1P30YFlNDX/">
                         <i class="ti-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
+                        <span>@shanngens</span>
                     </a>
                 </div>
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/bg-img/13.jpg" alt="">
+                <img src="img/insta/insta3.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
+                    <a href="https://www.instagram.com/p/Bz6zC3NFvvl/">
                         <i class="ti-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
+                        <span>@shanngens</span>
                     </a>
                 </div>
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/bg-img/14.jpg" alt="">
+                <img src="img/insta/insta4.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
+                    <a href="https://www.instagram.com/p/Bww-8_Bg90r/">
                         <i class="ti-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
+                        <span>@shanngens</span>
                     </a>
                 </div>
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/bg-img/15.jpg" alt="">
+                <img src="img/insta/insta5.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
+                    <a href="https://www.instagram.com/p/B1kWHPSFMUk/">
                         <i class="ti-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
+                        <span>@shanngens</span>
                     </a>
                 </div>
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/bg-img/16.jpg" alt="">
+                <img src="img/insta/insta6.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
+                    <a href="https://www.instagram.com/p/BzUKL2SlsY2/">
                         <i class="ti-instagram" aria-hidden="true"></i>
-                        <span>Alime_photographer</span>
+                        <span>@shanngens</span>
                     </a>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- Follow Area End -->
 
     <!-- Footer Area Start -->
@@ -360,19 +225,15 @@
                         <!-- Copywrite Text -->
                         <div class="copywrite-text">
                             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> Shannon Lin. All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                         </div>
                         <!-- Footer Logo -->
-                        <div class="footer-logo">
-                            <a href="#"><img src="img/core-img/logo2.png" alt=""></a>
-                        </div>
+
                         <!-- Social Info -->
                         <div class="social-info">
-                            <a href="#"><i class="ti-facebook" aria-hidden="true"></i></a>
-                            <a href="#"><i class="ti-twitter-alt" aria-hidden="true"></i></a>
-                            <a href="#"><i class="ti-linkedin" aria-hidden="true"></i></a>
-                            <a href="#"><i class="ti-pinterest" aria-hidden="true"></i></a>
+                            <a href="https://www.instagram.com/shanngens/"><i class="ti-instagram" aria-hidden="true"></i></a>
+                            <a href="https://www.youtube.com/channel/UCPKT4TCm6bDl1R_Pn7XY4ww"><i class="ti-youtube" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
