--- a/shanngens_about.html
+++ b/shanngens_about.html
@@ -154,10 +154,14 @@
                                 <p class="wow fadeInUp" data-wow-delay="300ms">I’m known as Shanngens or Shann on social media! I’m most active on Instagram and Youtube, but I’m working towards setting up a twitter and tumblr as well. I create animatics and original illustrations in my own style, and I am a self-taught animator. I draw and animate with Procreate, and edit with Adobe Premiere Pro and After Effects. I use a 10.5 in. iPadPro and Apple Pencil. Feel free to email or DM me for commissions or questions! My business email is shanngens@gmail.com.</p>
                             </div>
                         </div>
-                        <div class="col-12 col-lg-6">
+                        <div class="col-12 col-lg-7">
+                          <div class="about-us-content mb-80">
+                                <h5 class="wow fadeInUp" data-wow-delay="100ms">Youtube</h5>
+                                <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
                                 <p class="wow fadeInUp" data-wow-delay="300ms">In my free time, I create animatics, animations, speedpaints, and other videos. Most of them are from musicals I enjoy, or my favorite songs in general. These take anywhere from 6-63 hours to make, and some consist of over 500+ frames.</p>
+                          </div>
                         </div>
-                        <div class="col-12 col-lg-4">
+                        <div class="col-12 col-lg-5">
                             <div class="mb-80 wow fadeInUp" data-wow-delay="100ms">
                               <iframe
                               src="https://www.youtube.com/embed/nqDYW_tgP5w"
